objects/SPM_AccountRegion_Program__c.object
<CustomObject>
    <fields>
        <fullName>AccountRegion_ID__c</fullName>
        <description>AccountRegion ID</description>
        <inlineHelpText>AccountRegion ID</inlineHelpText>
        <label>AccountRegion ID</label>
        <referenceTo>SPM_Account_Regions__c</referenceTo>
        <relationshipLabel>Region Program Coverage</relationshipLabel>
        <relationshipName>Region_Program_Coverage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Sales__c</fullName>
        <formula>Program_ID__r.Actual_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Sales ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <formula>Program_ID__r.Merchant__r.LastName &amp; &quot;,&quot; &amp;  
 Program_ID__r.Merchant__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program ID</description>
        <inlineHelpText>Program ID</inlineHelpText>
        <label>Program ID</label>
        <referenceTo>SPM_Account_Program__c</referenceTo>
        <relationshipLabel>Region Program Coverage</relationshipLabel>
        <relationshipName>Region_Program_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Program_ID__r.Service_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Score_Last_Quarter__c</fullName>
        <formula>Program_ID__r.SBI_Score_Last_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBI Score - Last Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>